--- a/index.qmd
+++ b/index.qmd
@@ -4,40 +4,40 @@ title: 1. Title
 ---
 
 
-# 1. Title:
+# 1. Title: {#Title}
 
 
 ---
 
-# 2. Introduction:
+# 2. Introduction: {#Introduction}
 
 ---
 
-# 3. Installation & Setup:
+# 3. Installation & Setup: {#Installation-Setup}
 
 ---
 
-# 4. Key Features & Explanation:
+# 4. Key Features & Explanation: {#Key Features-Explanation}
 
 ---
 
-# 5. Code Examples:
+# 5. Code Examples: {#Code-Examples}
 
 ---
 
-# 6. Screenshots:
+# 6. Screenshots: {#Screenshots}
 
 ---
 
-# 7. Use Cases:
+# 7. Use Cases: {#Use-Cases}
 
 ---
 
-# 8. Conclusion:
+# 8. Conclusion: {#Conclusion}
 
 ---
 
-# 9. References & Further Reading:
+# 9. References & Further Reading: {#References-Further-Reading}
 
 ---
 Quarto template Text!
