--- a/index.qmd
+++ b/index.qmd
@@ -14,7 +14,8 @@ dtjfhmfygmhgyjfgjdykfhmyilu
 ---
 
 # 2. Introduction: {#Introduction}
-
+Kepler.gl is a WebGL-powered, open-source tool for displaying massive amounts of geographical data. It was created by the Visualization team of Uber and allows users to rapidly and simply generate interactive maps without needing to know a lot of code. Kepler.gl automatically processes datasets and creates beautiful visuals using an easy-to-use drag-and-drop interface.
+Its robust features, which include time-based animations, support for many layers, and 3D mapping, make it perfect for uses in environmental studies, transportation analysis, and urban planning. Kepler.gl offers a smooth method for exploring, analyzing, and sharing location-based insights, regardless of your background as a data scientist, researcher, or analyst.
 ---
 
 # 3. Installation & Setup: {#Installation-Setup}
