--- a/index.qmd
+++ b/index.qmd
@@ -198,7 +198,40 @@ Users are able to overlay multiple layers such as:
 
 * Hexbin & Grid Layers – Bins data into hexagonal or square bins.
 
-* Layers can be customized with colors, sizes, and labels.
+Layers can be customized with colors, sizes, and labels.
+
+## 3. Advanced Filtering & Data Exploration
+
+* Filtering allows users to concentrate on data subsets of their interest.
+
+* Interactive click and hover functionalities deliver greater insight into data points.
+
+## 4. Time Animation for Dynamic Data
+
+* Time playback functionality enables visualization of how the data evolves through time.
+
+* Beneficial in monitoring movement, trends, and temporal patterns.
+
+## 5. 3D Data Visualization
+
+* Facilitates elevation-based mapping of depth and perspective.
+
+* Useful for showing values such as population density or elevation.
+
+## 6. Custom Styling & Theming
+
+* They are able to change colors, transparency, labels, and tooltips for improved readability.
+
+* Includes dark and light themes to accommodate various styles of visualization.
+
+## 7. Exporting & Sharing Maps
+
+* Export as HTML, JSON, or images.
+
+* Share interactive maps effortlessly through URL or embed into presentations and web pages.
+
+
+
 
 
 ---
