--- a/index.qmd
+++ b/index.qmd
@@ -245,6 +245,12 @@ Layers can be customized with colors, sizes, and labels.
 
 # Screenshots: {#Screenshots}
 
+![1](Screenshot 2025-02-25 165819.png)
+
+![2](Screenshot 2025-02-25 165847.png)
+
+![3](Screenshot 2025-02-25 170038.png)
+
 ---
 
 # Use Cases: {#Use-Cases}
